fix up responsive spacing of social icons

--- a/wp-content/themes/seats-plus-2020/css/app.css
+++ b/wp-content/themes/seats-plus-2020/css/app.css
@@ -1337,7 +1337,12 @@ body > footer .social ul {
   display: flex;
   flex-wrap: wrap;
   padding: 0;
-  margin: 0 30px 0;
+  margin: 30px 0;
+}
+@media (max-width: 1880px) {
+  body > footer .social ul {
+    margin: 20px 30px 30px;
+  }
 }
 @media (max-width: 1200px) {
   body > footer .social ul {
