--- a/wp-content/themes/seats-plus-2020/resources/sass/partials/footer.scss
+++ b/wp-content/themes/seats-plus-2020/resources/sass/partials/footer.scss
@@ -27,7 +27,10 @@ body > footer {
       display: flex;
       flex-wrap: wrap;
       padding: 0;
-      margin: 0 30px 0;
+      margin: 30px 0;
+      @include lg {
+        margin: 20px 30px 30px;
+      }
       @include md {
         justify-content: center;
         margin: 0 auto 30px;
